[package]
name    = "eom"
version = "0.10.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Configurable ODE/PDE solver"
documentation = "https://docs.rs/eom/"
repository    = "https://github.com/termoshtt/eom"
keywords      = ["ndarray", "ode", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[features]
default   = []

[dependencies]
num-traits  = { version = "0.2.11",  default-features = false }
num-complex = { version = "0.3",  default-features = false }
derive-new  = { version = "0.5",  default-features = false }
ndarray     = { version = "0.14", default-features = false }
ndarray-linalg = { version = "0.13", default-features = false }

[dev-dependencies]
criterion = "0.3"
lapack-src = { version = "*", features = ["openblas"] }

[[bench]]
name = "ode"
harness = false

[profile.release]
debug = true
